# bappeda-evals

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  USAGE_GUIDE.md  analyze_results.py  check_credits.py  check_openrouter_status.py  config.yaml  evaluate_factual_correctness.py  evaluate_factual_correctness_standalone.py  execution-log.txt  execution-logs.txt  extract_metadata.py  generate_multihop_testset.py  generate_testset.py  generate_testset_improved.py  multihop_partial.csv  multihop_partial_1.csv  multihop_progress.json  multihop_translated.csv  pyproject.toml  run_rag_executor.py  run_ragas_evaluation.py  test_sample.jsonl  translate_user_input.py
.claude/: settings.local.json
251101/: factual_correctness_detailed.jsonl  factual_correctness_report.md
251102/: factual_correctness_detailed.jsonl  factual_correctness_report.md
domain-approach/: add_query_id.py  run_domain_executor.py  sum_factual_correctness.py  testset.jsonl  tuples.md  verify_query_id_mapping.py  verify_testset.py
excluded-files/: RPJMD 2025-2029.md
knowledge-files/: PERDA NO.1 TAHUN 2025.md  PERDA NO.2 TAHUN 2025.md  PERDA NO.3 TAHUN 2025.md  RKPD 2025.md  RPJPD 2025-2045.md  basis_pengetahuan_bappeda_dki_jakarta.md
lib/: __init__.py  api_validator.py  data_transformer.py  error_handlers.py  logger.py  metadata_loader.py  openrouter_chat.py  progress_tracker.py  rag_client.py  ragas_evaluator.py  report_generator.py  result_writer.py  state_manager.py
