[project]
name = "rag-eval-ragas"
version = "0.1.0"
description = "Synthetic evaluation dataset generation for RAG applications using Ragas framework and OpenRouter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ragas>=0.3.9",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "rapidfuzz>=3.14.3",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
